--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <a href="/" class="logo">
-            <img src="images/logo.png" alt="logo" class="logo__img">
+            <img src="images/logo.png" scrset="images/logo.png 1x, images/logo@2x.png 2x"alt="logo" class="logo__img">
         </a>
         <nav class="menu">
             <ul class="menu__list">
